# fastapi-notes-api

./: .gitignore  Makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 1bf36191cab0_add_role_enum_column_to_users.py  2d9b1a7662f8_add_full_name_last_login_and_profile_.py  967d5fd70827_create_users_and_notes_tables.py
app/: main.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  security.py
app/db/: redis.py  registry.py  session.py
app/dependencies/: auth.py
app/models/: enums.py  note.py  user.py
app/repositories/: note_repo.py  user_repo.py
app/schemas/: note.py  user.py
app/services/: auth_service.py  note_service.py
